opam-version: "2.0"
name: "logger"
version: "0.1"
synopsis: "simple logger"
maintainer: "Programming Systems Laboratory, KAIST"
authors: "Programming Systems Laboratory, KAIST"
homepage: "https://github.com/prosyslab/logger"
bug-reports: "https://github.com/prosyslab/logger"
license: "BSD"
dev-repo: "git+https://github.com/prosyslab/logger.git"
build: [["dune" "build" "-p" name "-j" jobs "@install"]]
depends: [
  "ocaml" {>="4.11.0"}
]
